Fix visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,16 @@ img {
 /* common */
 
 .visually-hidden {
-  visibility: hidden;
-  pointer-events: none;
   position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: inset(100%);
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 .container {
